--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "C_Cpp.default.includePath": [
         "c:\\Users\\musta\\AppData\\Roaming\\MetaQuotes\\Terminal\\53785E099C927DB68A545C249CDBCE06\\MQL5\\Include\\Include",
-        "c:\\Users\\musta\\AppData\\Roaming\\MetaQuotes\\Terminal\\53785E099C927DB68A545C249CDBCE06\\MQL5\\Include"
+        "c:\\Users\\musta\\AppData\\Roaming\\MetaQuotes\\Terminal\\53785E099C927DB68A545C249CDBCE06\\MQL5\\Include",
+        "c:\\Users\\mmagdy\\AppData\\Roaming\\MetaQuotes\\Terminal\\FFCA70DEACB494DED12D05537B303E70\\MQL5\\Include"
     ],
     "files.associations": {
         "*.mq5": "cpp",
