--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "files.associations": {
         "*.mq5": "cpp",
         "*.mqh": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
